# mwe_networked_hitscan

./: .gitmodules  .required_shader_batchers.txt  README.md  copy_directory_with_submodules.py
client/: .required_shader_batchers.txt  CHANGELOG.md  CMakeLists.txt  ccgen.ini  conanfile.txt
client/assets/config/: user_cfg.ini
client/src/: main.cpp
client/src/networking/packets/: packets.hpp
client/src/sound/sound_types/: sound_types.hpp
client/src/system_logic/hitscan_logic/: hitscan_logic.hpp
client/src/system_logic/mouse_update_logger/: mouse_update_logger.hpp
server/: CMakeLists.txt  README.md  conanfile.txt
server/assets/config/: user_cfg.ini
server/src/: main.cpp
server/src/meta_program/: meta_program.hpp
server/src/networking/packets/: packets.hpp
server/src/sound/sound_types/: sound_types.hpp
server/src/system_logic/mouse_update_logger/: mouse_update_logger.hpp
server/src/system_logic/sphere_orbiter/: sphere_orbiter.hpp
shared/: symlinks.txt
shared/hitscan_logic/: hitscan_logic.cpp
shared/mouse_update_logger/: mouse_update_logger.hpp
shared/packet_types/: packet_types.hpp
shared/packets/: packets.hpp
shared/random_vector/: random_vector.cpp
shared/sphere_orbiter/: sphere_orbiter.cpp
single_player/: CMakeLists.txt
single_player/src/: main.cpp
single_player/src/system_logic/random_vector/: random_vector.hpp
src/: main.cpp
